# MatrixCalculator

./: io.github.diegoivan.matrixoperator.json  meson.build
data/: io.github.diegoivan.matrixoperator.appdata.xml.in  io.github.diegoivan.matrixoperator.desktop.in  io.github.diegoivan.matrixoperator.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  matrixoperator.gresource.xml  meson.build  window.ui  window.vala
src/Factories/: LabelWidgetFactory.vala  MatrixWidgetFactory.vala  SpinButtonWidgetFactory.vala
src/Models/: Matrix.vala  MatrixItem.vala  MatrixModel.vala  Row.vala  SquareMatrixModel.vala
src/Views/: MatrixGridView.vala
src/Widgets/: MatrixGrid.vala  NumberEntry.vala
